The 7th Proj: fixed can't split unevenly
最开始定位时，要利用.split-left(.split-right)父组件的display:flex进行half划分，这样在后面可以用width调整宽度。不能用.split-left(.split-right)中位置absolute进行初始half划分，不然后续改不了width

--- a/07_Split_Landing_Page/style.css
+++ b/07_Split_Landing_Page/style.css
@@ -23,6 +23,7 @@ body {
 .container {
     height: 100vh;
     width: 100vw;
+    display: flex;
 }
 
 .split {
@@ -38,9 +39,6 @@ body {
 }
 
 .split.left {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 50%;
     background: url('./ps.jpg');
     background-position: center;
@@ -58,9 +56,6 @@ body {
 }
 
 .split.right {
-    position: absolute;
-    top: 0;
-    left: 50%;
     width: 50%;
     background: url('./xbox.jpg');
     background-position: center;
